--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ src="https://www.facebook.com/tr?id=886078547122155&ev=PageView&noscript=1"
         <a href="https://t.me/KUNALGAMECHANGER" style="color: #fff; text-decoration: none; font-weight: bold; font-size: 14px;">@Kunalgamechanger</a>
     </div>
 </div>
-    <a href="https://t.me/+xFfXLE_R_WFhYjVl" class="join-btn" onclick="fbq('track', 'Lead');">
+    <a href="https://t.me/+teYx8fL6bLQ5MDc0" class="join-btn" onclick="fbq('track', 'Lead');">
         JOIN GAME CHANGER KUNAL <br> CHANNEL 🚀
     </a>
 
